2013-12-18  Dirk Eddelbuettel  <edd@debian.org>

	* vignettes/RProtoBuf-intro.Rnw: Use with vignette builder
	* vignettes/RProtoBuf-quickref.Rnw: Idem
	* vignettes/RProtoBuf-unitTests.Rnw: Rewritten / simplified

	* DESCRIPTION: Increased dependency to R (>= 3.0.0)

	* configure.in: No longer create vignettes/Makefile

2013-12-17  Murray Stokely  <murray@FreeBSD.org>

	* R/completion.R (.DollarNames.Message): Add missing methods to
	  dollar completion list for Message and Descriptor objects
	* vignettes/RProtoBuf/RProtoBuf.Rnw (subsection{messages}): Add
	  missing methods to Table 2 (Messages) and add a table and new
	  sections of methods for Descriptor objects.

2013-12-16  Dirk Eddelbuettel  <edd@debian.org>

	* src/rprotobuf.h (RCPP_ENUM_TRAITS): Don't use extern "C" on
	internal functions returning atomistic or C++ types

2013-12-15  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version): Release 0.3.2

	* tests/runUnitTests.R: Minor rewrite and cleanup from doRUnit.R with
	a tip of the hat to Murray's version in his HistogramTools package

2013-12-14  Dirk Eddelbuettel  <edd@debian.org>

	* src/lookup.cpp (rprotobuf): Descrictor pools attached directly
	* R/lookup.R (attachDescriptorPool): No longer attach them here
	* src/rprotobuf.h: Updated function declaration

2013-12-14  Murray Stokely  <murray@FreeBSD.org>

	* src/mutators.cpp (rprotobuf): Fix a bug which incorrectly
	  prevented users from setting raw non-repeated fields under some
	  circumstances.
	* inst/unitTests/runit.bytes.R (test.all): Verify raw(10) can be
	  set to required bytes fields to verify correct behavior for use
	  case mentioned on rprotobuf-yada list.

2013-11-13  Murray Stokely  <murray@FreeBSD.org>

	* R/extensions.R: Give a user friendly error message if someone tries
	  to set an extension to a message of the wrong type instead of
	  causing a C++ check failure that terminates your R session.
	* inst/unitTests/runit.extensions.R (test.extension): Add test.
